--- a/index.html
+++ b/index.html
@@ -39,7 +39,27 @@
 				<div id="bio_socials">
 					<a href="https://kitsu.io/users/heyKPerks" id="bio-social-kitsu"class="bio-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
 					<a href="https://twitter.com/heyKPerks" id="bio-social-twitter"class="bio-social-item"><i class="fab fa-twitter"></i></a>
-					<a href="" id="bio-social-discord" class="bio-social-item"><i class="fab fa-discord"></i></a>										
+					<a href="" id="bio-social-discord"class="bio-social-item"><i class="fab fa-discord"></i></a>
+
+					<!--
+					<button id="social_discord_btn" class="bio-social-item"><i class="fab fa-discord"></i></button>													
+						<!-- The Modal 
+						<div id="discord_modal" class="modal">
+							<!-- Modal content 
+							<div class="modal-content">
+								<h2><i class="fab fa-discord"></i> Discord</h2>
+								<div>
+									<h3>DM's Are Open</h3>
+									<span>heyKPerks</span>
+								</div>
+								<div>
+									<h3>Join My Server</h3>
+									<span>PerksPlace</span>
+								</div>
+								<button id="close_discord_modal">Close</button>
+							</div>					
+						</div>						
+					-->
 				</div>
 			</div><!-- bio -->
 
@@ -85,8 +105,8 @@
 						<h2 class="section-heading">Currently Watching</h2>
 						<div class="tiled-list scrolling-tiled-list">
 							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->
-							<a class="tile" href="https://kitsu.io/anime/kobayashi-san-chi-no-maid-dragon-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42149/large.jpg?1597696965" alt=" Miss Kobayashi's Dragon Maid 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tokyo-revengers"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43321/large.jpg?1618109866" alt="Tokyo Revengers"></img><span class="tooltip">Tokyo Revengers</span></a>
+							
+							
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 
@@ -123,38 +143,32 @@
 						</div><!-- tiled-list -->
 
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
-						<div class="tiled-list scrolling-tiled-list">				
-							<a class="tile" href="https://kitsu.io/anime/fumetsu-no-anata-e"><img class="tile-image" src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b114535-jEzNgKyVxLNT.jpg" alt="To Your Eternity"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-2nd-season-part-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43361/large.jpg?1616836274" alt="That Time I Got Reincarnated as a Slime Season 2 Part 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/isekai-maou-to-shoukan-shoujo-no-dorei-majutsu-2"><img class="tile-image" src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx117448-IRah2GxIlwLH.jpg" alt="How Not to Summon a Demon Lord 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/zombieland-saga-revenge"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42467/large.jpg?1609509747" alt="Zombieland Saga Revenge"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/fena-pirate-princess"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43456/large.jpg?1627147727" alt="Fena: Pirate Princess"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/genjitsu-shugi-yuusha-no-oukoku-saikenki"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43613/large.jpg?1620025404" alt="How a Realist Hero Rebuilt the Kingdom"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/seijo-no-maryoku-wa-bannou-desu"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44115/large.jpg?1618374554" alt="The Saint's Magic Power is Omnipotent"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/edens-zero"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43521/large.jpg?1617551046" alt="Edens Zero"></img></a>
+						<div class="tiled-list scrolling-tiled-list">																		
+							<a class="tile" href="https://kitsu.io/anime/genjitsu-shugi-yuusha-no-oukoku-saikenki"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43613/large.jpg?1620025404" alt="How a Realist Hero Rebuilt the Kingdom"></img></a>														
 							<a class="tile" href="https://kitsu.io/anime/edens-zero"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43268/large.jpg?1620025880" alt="The Dungeon of Black Company"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/otome-game-no-hametsu-flag-shika-nai-akuyaku-reijou-ni-tensei-shiteshimatta-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43238/large.jpg?1616427533" alt="My Next Life as a Villainess: All Routes Lead to Doom! 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/shinigami-bocchan-to-kuro-maid"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44035/large.jpg?1622392850" alt="The Duke of Death and His Maid"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/uramichi-oniisan"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42658/large.jpg" alt="Life Lessons with Uramichi Oniisan"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43907/large.jpg?1621419229" alt="Mushoku Tensei: Jobless Reincarnation 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/platinum-end"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43862/large.jpg" alt="Platinum End"></img></a>						
+							<a class="tile" href="https://kitsu.io/anime/isekai-shokudou-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44434/large.jpg?1627559522" alt="Restaurant to Another World 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shin-no-nakama-ja-nai-to-yuusha-no-party-wo-oidasareta-node-henkyou-de-slow-life-suru-koto-ni-shima"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44167/large.jpg" alt="Banished from the Hero's Party"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/sekai-saikou-no-ansatsusha-isekai-kizoku-ni-tensei-suru"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44393/large.jpg" alt="he World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/saihate-no-paladin"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44432/large.jpg" alt="The Faraway Paladin"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 
 					<div class="watching-item"><!--Most Anticipated-->
 						<h2 class="section-heading">Most Anticipated</h2>
 						<h3 class="section-subheading">Season Fall 2021</h3> 
-						<div class="tiled-list scrolling-tiled-list">									
-							<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43907/large.jpg?1621419229" alt="Mushoku Tensei: Jobless Reincarnation 2"></img></a>
+						<div class="tiled-list scrolling-tiled-list">																
 							<a class="tile" href="https://kitsu.io/anime/kimetsu-no-yaiba-yuukaku-hen"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44081/large.jpg" alt="Demon Slayer 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/sword-art-online-progressive-movie-hoshi-naki-yoru-no-aria"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43546/large.jpg?1600530798" alt="Sword Art Online: Progressive Movie "></img></a>						
-							<a class="tile" href="https://kitsu.io/anime/jujutsu-kaisen-movie-0"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44212/large.jpg" alt="Jujutsu Kaisen 0 Movie"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/isekai-shokudou-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44434/large.jpg?1627559522" alt="Restaurant to Another World 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/jujutsu-kaisen-movie-0"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44212/large.jpg" alt="Jujutsu Kaisen 0 Movie"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/princess-principal-crown-handler-one"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41254/large.jpg?1623161012" alt="Princess Principal Crown Handler 1 "></img></a>						
 							<a class="tile" href="https://kitsu.io/anime/komi-san-wa-komyushou-desu"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44551/large.jpg" alt="Komi Can’t Communicate"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/sekai-saikou-no-ansatsusha-isekai-kizoku-ni-tensei-suru"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44393/large.jpg" alt="he World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/saihate-no-paladin"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44432/large.jpg" alt="The Faraway Paladin"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/taishou-otome-otogibanashi"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43817/large.jpg" alt="Taishou Otome Otogibanashi"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/takt-op"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44233/large.jpg" alt="Takt Op."></img></a>
-							<a class="tile" href="https://kitsu.io/anime/platinum-end"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43862/large.jpg" alt="Platinum End"></img></a>						
+							<a class="tile" href="https://kitsu.io/anime/takt-op"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44233/large.jpg" alt="Takt Op."></img></a>							
 							<!--
 								<a class="tile" href="https://kitsu.io/anime/heike-monogatari"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/45065/large.jpg" alt="The Heike Story"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/shin-no-nakama-ja-nai-to-yuusha-no-party-wo-oidasareta-node-henkyou-de-slow-life-suru-koto-ni-shima"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44167/large.jpg" alt="Banished from the Hero's Party"></img></a>
