--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
 						<h2 class="section-heading">Currently Watching</h2>
 						<div class="tiled-list scrolling-tiled-list">
 							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->
-							<a class="tile" href="https://kitsu.io/anime/one-piece"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/12/large.jpg" alt="One Piece"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/otome-game-no-hametsu-flag-shika-nai-akuyaku-reijou-ni-tensei-shiteshimatta-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43238/large.jpg?1616427533" alt="My Next Life as a Villainess: All Routes Lead to Doom! 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/one-piece"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/12/large.jpg" alt="One Piece"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/isekai-shokudou-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44434/large.jpg?1627559522" alt="Restaurant to Another World 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/senpai-ga-uzai-kouhai-no-hanashi"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43313/large.jpg" alt="My Senpai is Annoying"></img></a>
 
@@ -132,6 +131,7 @@
 						<h3 class="section-subheading">Backlog Bingeing</h3> 
 						<div class="tiled-list scrolling-tiled-list">											
 							<a class="tile" href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru-kan"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42194/large.jpg?1597696997" alt="My Teen Romantic Comedy SNAFU Climax"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/vinland-saga"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41084/large.jpg?1597696763" alt="VINLAND SAGA"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/nichijou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/6062/large.jpg?1597696783" alt="Nichijou "></img></a>
 							<a class="tile" href="https://kitsu.io/anime/chuunibyou-demo-koi-ga-shitai"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7160/large.jpg?1597699260" alt="Love, Chunibyo & Other Delusions!"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/koi-wa-ameagari-no-you-ni"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13277/large.jpg?1597697509" alt="After the Rain"></img></a>
@@ -141,7 +141,6 @@
 							<a class="tile" href="https://kitsu.io/anime/3-gatsu-no-lion"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/11380/large.jpg?1597696842" alt="March comes in like a lion"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/fruits-basket-2019"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41995/large.jpg?1597696876" alt="Fruits Basket"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/wonder-egg-priority"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43620/large.jpg?1616155451" alt="Wonder Egg Priority"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shadows-house"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43820/large.jpg?1621263244" alt="Shadows House"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/eighty-six"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43066/large.jpg?1618749016" alt="86"></img></a>
 						</div><!-- tiled-list -->
 
@@ -189,8 +188,7 @@
 				
 					<div class="watching-item"><!--Please Dub -->
 						<h2 class="section-heading">Please Dub</h2>
-						<div class="tiled-list scrolling-tiled-list">
-						<a class="tile" href="https://kitsu.io/anime/vinland-saga"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41084/large.jpg?1597696763" alt="VINLAND SAGA"></img></a>
+						<div class="tiled-list scrolling-tiled-list">						
 						<a class="tile" href="https://kitsu.io/anime/a-place-further-than-the-universe"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13615/large.jpg?1597696818" alt="A Place Further Than the Universe"></img></a>
 						<a class="tile" href="https://kitsu.io/anime/seishun-buta-yarou-wa-bunny-girl-senpai-no-yume-wo-minai"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41056/large.jpg?1597698765" alt="Rascal Does Not Dream of Bunny Girl Senpai"></img></a>
 						<a class="tile" href="https://kitsu.io/anime/wotaku-ni-koi-wa-muzukashii"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13660/large.jpg?1597696908" alt="Wotakoi: Love Is Hard for Otaku"></img></a>
@@ -198,6 +196,7 @@
 						<a class="tile" href="https://kitsu.io/anime/jinrui-wa-suitai-shimashita"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/6146/large.jpg?1597697141" alt="Humanity Has Declined"></img></a>
 						<a class="tile" href="https://kitsu.io/anime/kishuku-gakkou-no-juliet"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41065/large.jpg?1597691087" alt="Boarding School Juliet"></img></a>
 						<a class="tile" href="https://kitsu.io/anime/mahouka-koukou-no-rettousei"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/8053/large.jpg?1597694878" alt="The Irregular at Magic High School"></img></a>
+						<a class="tile" href="https://kitsu.io/anime/nisekoi"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7821/large.jpg" alt="Nisekoi: False Love"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Please Dub-->							
 				</div><!-- watching -->
@@ -438,6 +437,9 @@
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/4evV8Fr5A8U"><span class="OP_ED-anime">Black Clover,</span><span class="OP_ED-title">"Black Catcher" by Vickeblanka</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/aJRu5ltxXjc"><span class="OP_ED-anime">Naruto Shippuden,</span><span class="OP_ED-title">"Blue Bird" by Ikimono Gakari</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/aZenmeRytEM"><span class="OP_ED-anime">Noragami Aragoto,</span><span class="OP_ED-title">"Kyouran Hey Kids!" by The Oral Cigarettes</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/fQwZ6bOW09k"><span class="OP_ED-anime">My Roommate is a Cat,</span><span class="OP_ED-title">"Unknown World" by Schrodinger's Cat adding Kotringo</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/tlrPO6dBaxw"><span class="OP_ED-anime">Sakura Quest,</span><span class="OP_ED-title">"Morning Glory" by (K)NoW_NAME</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/MN_WgwEmRaw"><span class="OP_ED-anime">Spice and Wolf,</span><span class="OP_ED-title">"Tabi no Tochuu" by Natsumi Kiyoura</span></a></div>
 					</div><!--OPs-->
 					
 					<div class="favorite-item"><!--EDs-->
@@ -452,6 +454,7 @@
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/6riDJMI-Y8U"><span class="OP_ED-anime">Jujutsu Kaisen,</span><span class="OP_ED-title">"Lost in Paradise" feat. AKLO by ALI</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/-rokG9XS37w"><span class="OP_ED-anime">Kaguya-sama: Love is War,</span><span class="OP_ED-title">"Chikatto Chika Chika♡"</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/o05UK9lXtC0"><span class="OP_ED-anime">Attack on Titan Season 3,</span><span class="OP_ED-title">"Requiem der Morgenröte" by Linked Horizon</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/TERi1b3ISdk"><span class="OP_ED-anime">Restaurant to Another World Season 2,</span><span class="OP_ED-title">"Samenai Mahou" by Nao Toyama</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/gIGEbitYqL0"><span class="OP_ED-anime">Re:Zero,</span><span class="OP_ED-title">"Styx Helix" by Myth and Roid</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/VneknudkhAk"><span class="OP_ED-anime">Log Horizon Season 2,</span><span class="OP_ED-title">"Wonderful Wonder World" by Yun*chi</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/AubeXRKtU8U"><span class="OP_ED-anime">Konosuba Season 2,</span><span class="OP_ED-title">"Ouchi ni Kaeritai" by Amamiya, Takahashi, and Kayano</span></a></div>
