--- a/index.html
+++ b/index.html
@@ -233,6 +233,15 @@
 								<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/My-Heo_large.jpg" alt="My Hero Academia"></img></a>
 							</div>
 						</div><!--Action-->
+						<div class="tiled-list-card first-card">
+							<h4 class="tile-card-heading">Adventure</h4>
+							<div class="card-tiled-list">
+								<a class="tile" href="https://kitsu.io/anime/vinland-saga"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Vinland-Saga_large.jpg" alt="Vinland Saga"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/seirei-no-moribito"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Moribito_large.jpg" alt="Moribito"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/arslan-senki-tv"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/The-Heroic-Legend-of-Arslan_large.jpg" alt="The Heroic Legend of Arslan"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/grancrest-senki"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Record-of-Grancrest-War_large.jpg" alt="Record of Grancrest War"></img></a>
+							</div>
+						</div><!--Adventure-->
 						<div class="tiled-list-card">
 							<h4 class="tile-card-heading">Comedy</h4>
 							<div class="card-tiled-list">						
