updated content and styles
updated characters and button styles

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 							<!--<a class="tile" href=""><img class="tile-image" src="" alt=""></img></a>-->
 						</div><!-- tiled-list -->
 
-						<button onclick="more_bygenre_btn()" id="more_bygenre_btn">Show more</button>
+						<button onclick="more_bygenre_btn()" id="more_bygenre_btn" class="btn-pill-full-width">Show more</button>
 					</div><!--anime Series-->
 
 					<div id="more_cards_genre" class="scrolling-cards favorite-item">
@@ -398,7 +398,7 @@
 							<a class="tile" href="https://myanimelist.net/character/151335/Elaina"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Elaina_large.jpg" alt="Elaina The Ashen Witch"></img></a>
 						</div>
 
-						<button onclick="more_female_btn()" id="more_female_btn" class="more-char-btn">Show more</button>
+						<button onclick="more_female_btn()" id="more_female_btn" class="btn-pill-full-width">Show more</button>
 					</div><!--Female Characters-->
 
 					<div id="more_cards_female" class="scrolling-cards favorite-item">
@@ -411,6 +411,39 @@
 								<a class="tile" href="https://myanimelist.net/character/1111/CC"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/CC_large.jpg" alt="C2"></img></a>						
 							</div>
 						</div><!---->	
+						<div class="tiled-list-card">					
+							<h4 class="tile-card-heading"></h4>
+							<div class="card-tiled-list">						
+								<a class="tile" href="https://myanimelist.net/character/13701/Mikoto_Misaka?q=mikoto%20misaka&cat=character"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Mikoto-Misaka_large.jpg" alt="Mikoto Misaka"></img></a>						
+								<a class="tile" href="https://myanimelist.net/character/2063/Yoko_Littner"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Yoko-Littner_large.jpg" alt="Yoko Littner"></img></a>
+							</div>
+						</div><!---->	
+						<div class="tiled-list-card">					
+							<h4 class="tile-card-heading">Shonen Wamen</h4>
+							<div class="card-tiled-list">						
+								<a class="tile" href="https://myanimelist.net/character/5189/Erza_Scarlet"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Erza_large.webp" alt="Erza Scarlet"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/133768/Maki_Oze"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Maki-Oze_large.png" alt="Maki Oze"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/127141/Noelle_Silva"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Noelle-Silva_large.png" alt="Noelle Silva"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/43121/Morgiana"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Morgiana_large.jpg" alt="Morgiana"></img></a>
+							</div>
+						</div><!---->							
+						<div class="tiled-list-card">					
+							<h4 class="tile-card-heading">#Team Harem</h4>
+							<div class="card-tiled-list">						
+								<a class="tile" href="https://myanimelist.net/character/161472/Nino_Nakano?q=nino%20nak&cat=character"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Nino-Nakano_large.jpg" alt="Nino Nakano"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/48391/Chitoge_Kirisaki?q=chitoge&cat=character"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Chitoge-Kirisaki_large.jpg" alt="Chitoge Kirisaki"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/67067/Yukino_Yukinoshita/pictures"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Yukino-Yukinoshita_large.webp" alt="Yukino Yukinoshita"></img></a>
+							</div>
+						</div><!---->	
+						<div class="tiled-list-card">					
+							<h4 class="tile-card-heading"></h4>
+							<div class="card-tiled-list">						
+								<a class="tile" href="https://myanimelist.net/character/93273/Hestia"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Hestia_large.webp" alt="Hestia"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/136727/Tooru"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Tooru_large.jpg" alt="Tooru"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/151883/Aletta"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Aletta_large.jpg" alt="Aletta"></img></a>								
+								<a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a>
+							</div>
+						</div><!---->						
 						
 						<div class="tiled-list-card last-card"></div>
 					</div><!-- more_cards_female -->	
@@ -452,7 +485,7 @@
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/4J8jcI0WtzM"><span class="OP_ED-anime">Blood Blockade Battlefront,</span><span class="OP_ED-title">"Hello,world!" by Bump of Chicken</span></a></div>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/Eq6EYcpWB_c"><span class="OP_ED-anime">Samurai Champloo,</span><span class="OP_ED-title">"Battlecry" by Nujabes feat. Shing02</span></a></div>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/6CBp4qylX6I"><span class="OP_ED-anime">No Game No Life,</span><span class="OP_ED-title">"This Game" by Konomi Suzuki</span></a></div>
-						<button onclick="more_OP_ED_item_op_btn()" id="more_OP_ED_item_op_btn" class="more-OP_ED-item-btn">Show more</button>
+						<button onclick="more_OP_ED_item_op_btn()" id="more_OP_ED_item_op_btn" class="btn-pill-full-width">Show more</button>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/UjjTMNDZi-A"><span class="OP_ED-anime">Death Parade,</span><span class="OP_ED-title">"Flyers" by BRADIO</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/atxYe-nOa9w"><span class="OP_ED-anime">One Punch Man,</span><span class="OP_ED-title">"The Hero!! Set Fire to the Furious Fist" by JAM Project</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/Ef_ZfhqN-ls"><span class="OP_ED-anime">New Game!,</span><span class="OP_ED-title">"Sakura Skip" by Fourfolium</span></a></div>
@@ -474,7 +507,7 @@
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/wwQGn-5A2HE"><span class="OP_ED-anime">Fire Force,</span><span class="OP_ED-title">"Veil" by Keina Suda</span></a></div>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/i8Yjk7KedVg"><span class="OP_ED-anime">Mob Psycho 100,</span><span class="OP_ED-title">"Refrain Boy" by Von ALL OFF</span></a></div>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/2bm2WmWiohw"><span class="OP_ED-anime">Kobayashi's Dragon Maid,</span><span class="OP_ED-title">"Hukan Communication" by Yuki Kuwahara</span></a></div>					
-						<button onclick="more_OP_ED_item_ed_btn()" id="more_OP_ED_item_ed_btn" class="more-OP_ED-item-btn">Show more</button>
+						<button onclick="more_OP_ED_item_ed_btn()" id="more_OP_ED_item_ed_btn" class="btn-pill-full-width">Show more</button>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/Gdt4h0ZobfI"><span class="OP_ED-anime">K-ON!,</span><span class="OP_ED-title">"Don't Say Lazy" by Sakurakou K-ON Bu</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/6riDJMI-Y8U"><span class="OP_ED-anime">Jujutsu Kaisen,</span><span class="OP_ED-title">"Lost in Paradise" feat. AKLO by ALI</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/-rokG9XS37w"><span class="OP_ED-anime">Kaguya-sama: Love is War,</span><span class="OP_ED-title">"Chikatto Chika Chika♡"</span></a></div>
