--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 
 					<div id="more_cards_female" class="scrolling-cards favorite-item">
 						<div class="tiled-list-card first-card">					
-							<h4 class="tile-card-heading"></h4>
+							<h4 class="tile-card-heading">My Clasics</h4>
 							<div class="card-tiled-list">						
 								<a class="tile" href="https://myanimelist.net/character/36828/Asuna_Yuuki"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Asuna-Yuuki_large.jpg" alt="Asuna Yuuki"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/498/Rin_Toosaka"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Rin-Toosaka_large.jpg" alt="Rin Toosaka"></img></a>
@@ -412,10 +412,12 @@
 							</div>
 						</div><!---->	
 						<div class="tiled-list-card">					
-							<h4 class="tile-card-heading"></h4>
+							<h4 class="tile-card-heading">Powerpacked</h4>
 							<div class="card-tiled-list">						
-								<a class="tile" href="https://myanimelist.net/character/13701/Mikoto_Misaka?q=mikoto%20misaka&cat=character"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Mikoto-Misaka_large.jpg" alt="Mikoto Misaka"></img></a>						
 								<a class="tile" href="https://myanimelist.net/character/2063/Yoko_Littner"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Yoko-Littner_large.jpg" alt="Yoko Littner"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/8439/Maka_Albarn"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Maka-Albarn_large.jpg" alt="Maka Albarn"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/13701/Mikoto_Misaka?q=mikoto%20misaka&cat=character"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Mikoto-Misaka_large.jpg" alt="Mikoto Misaka"></img></a>						
+								<a class="tile" href="https://myanimelist.net/character/43121/Morgiana"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Morgiana_large.jpg" alt="Morgiana"></img></a>
 							</div>
 						</div><!---->	
 						<div class="tiled-list-card">					
@@ -424,7 +426,7 @@
 								<a class="tile" href="https://myanimelist.net/character/5189/Erza_Scarlet"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Erza_large.webp" alt="Erza Scarlet"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/133768/Maki_Oze"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Maki-Oze_large.png" alt="Maki Oze"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/127141/Noelle_Silva"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Noelle-Silva_large.png" alt="Noelle Silva"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/43121/Morgiana"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Morgiana_large.jpg" alt="Morgiana"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/117917/Ochako_Uraraka"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Ochako-Uraraka_large.jpg" alt="Ochako Uraraka"></img></a>								
 							</div>
 						</div><!---->							
 						<div class="tiled-list-card">					
@@ -432,16 +434,26 @@
 							<div class="card-tiled-list">						
 								<a class="tile" href="https://myanimelist.net/character/161472/Nino_Nakano?q=nino%20nak&cat=character"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Nino-Nakano_large.jpg" alt="Nino Nakano"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/48391/Chitoge_Kirisaki?q=chitoge&cat=character"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Chitoge-Kirisaki_large.jpg" alt="Chitoge Kirisaki"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/67067/Yukino_Yukinoshita/pictures"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Yukino-Yukinoshita_large.webp" alt="Yukino Yukinoshita"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/67067/Yukino_Yukinoshita"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Yukino-Yukinoshita_large.webp" alt="Yukino Yukinoshita"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/37514/Sena_Kashiwazaki"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Sena_large.jpg" alt="Sena Kashiwazaki"></img></a>
 							</div>
 						</div><!---->	
 						<div class="tiled-list-card">					
-							<h4 class="tile-card-heading"></h4>
+							<h4 class="tile-card-heading">Must Protec</h4>
 							<div class="card-tiled-list">						
+								<a class="tile" href="https://myanimelist.net/character/163811/Myne"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Myne_large.jpg" alt="Myne"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/111045/Anzu"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Anzu_large.jpg" alt="Anzu"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/174332/Maple"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Maple_large.jpg" alt="Maple"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/159166/Catarina_Claes"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Catarina-Claes_large.jpg" alt="Catarina Claes"></img></a>															
+							</div>
+						</div><!---->		
+						<div class="tiled-list-card">					
+							<h4 class="tile-card-heading">Fantasy Favs</h4>
+							<div class="card-tiled-list">						
+								<a class="tile" href="https://myanimelist.net/character/99441/Chise_Hatori"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/chise_large.jpg" alt="Chise"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/93273/Hestia"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Hestia_large.webp" alt="Hestia"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/136727/Tooru"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Tooru_large.jpg" alt="Tooru"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/151883/Aletta"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Aletta_large.jpg" alt="Aletta"></img></a>								
-								<a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a>
+								<a class="tile" href="https://myanimelist.net/character/151883/Aletta"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Aletta_large.jpg" alt="Aletta"></img></a>															
 							</div>
 						</div><!---->						
 						
