--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<a class="tile" href="https://kitsu.io/anime/one-piece"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/12/large.jpg" alt="One Piece"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/isekai-shokudou-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44434/large.jpg?1627559522" alt="Restaurant to Another World 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/senpai-ga-uzai-kouhai-no-hanashi"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43313/large.jpg" alt="My Senpai is Annoying"></img></a>
-
+							<a class="tile" href="https://kitsu.io/anime/86-part-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44398/large.jpg" alt="86 Part 2"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 
@@ -140,20 +140,20 @@
 							<a class="tile" href="https://kitsu.io/anime/3-gatsu-no-lion"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/11380/large.jpg?1597696842" alt="March comes in like a lion"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/fruits-basket-2019"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41995/large.jpg?1597696876" alt="Fruits Basket"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/wonder-egg-priority"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43620/large.jpg?1616155451" alt="Wonder Egg Priority"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/dororo"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41083/large.jpg" alt="Dororo"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/yuru-camp-2"><img class="tile-image" src="https://media.kitsu.io/anime/41976/poster_image/large-088cc24535de233601c8b9b83cf09bde.jpeg" alt="Laid-Back Camp 2"></img></a> 
 						</div><!-- tiled-list -->
 
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
 						<div class="tiled-list scrolling-tiled-list">																		
-							<a class="tile" href="https://kitsu.io/anime/genjitsu-shugi-yuusha-no-oukoku-saikenki"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43613/large.jpg?1620025404" alt="How a Realist Hero Rebuilt the Kingdom"></img></a>														
-							<a class="tile" href="https://kitsu.io/anime/edens-zero"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43268/large.jpg?1620025880" alt="The Dungeon of Black Company"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/genjitsu-shugi-yuusha-no-oukoku-saikenki"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43613/large.jpg?1620025404" alt="How a Realist Hero Rebuilt the Kingdom"></img></a>																				
 							<a class="tile" href="https://kitsu.io/anime/shinigami-bocchan-to-kuro-maid"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44035/large.jpg?1622392850" alt="The Duke of Death and His Maid"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/uramichi-oniisan"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42658/large.jpg" alt="Life Lessons with Uramichi Oniisan"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43907/large.jpg?1621419229" alt="Mushoku Tensei: Jobless Reincarnation 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/platinum-end"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43862/large.jpg" alt="Platinum End"></img></a>													
 							<a class="tile" href="https://kitsu.io/anime/shin-no-nakama-ja-nai-to-yuusha-no-party-wo-oidasareta-node-henkyou-de-slow-life-suru-koto-ni-shima"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44167/large.jpg" alt="Banished from the Hero's Party"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/sekai-saikou-no-ansatsusha-isekai-kizoku-ni-tensei-suru"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44393/large.jpg" alt="he World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/saihate-no-paladin"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44432/large.jpg" alt="The Faraway Paladin"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/heike-monogatari"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/45065/large.jpg" alt="The Heike Story"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/saihate-no-paladin"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44432/large.jpg" alt="The Faraway Paladin"></img></a>													
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 
@@ -453,7 +453,7 @@
 								<a class="tile" href="https://myanimelist.net/character/99441/Chise_Hatori"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/chise_large.jpg" alt="Chise"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/93273/Hestia"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Hestia_large.webp" alt="Hestia"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/136727/Tooru"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Tooru_large.jpg" alt="Tooru"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/151883/Aletta"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Aletta_large.jpg" alt="Aletta"></img></a>															
+								<a class="tile" href="https://myanimelist.net/character/97761/Jibril"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Jibril_large.jpg" alt="Jibril"></img></a>															
 							</div>
 						</div><!---->						
 						
